--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     color: white;
     position: relative;
     overflow-x: hidden;
-    background: linear-gradient(-45deg, #00bfff, #ff1493, #9370db, #ffa07a);
+    background: linear-gradient(-45deg, #50d6fe, #fe96e6, #a496fe, #ffa07a);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
