--- a/styles/home.css
+++ b/styles/home.css
@@ -90,18 +90,38 @@
 
 .floating-elements span {
     position: absolute;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     animation: float-around 3s infinite;
 }
 
-.floating-elements span:nth-child(1) { left: 20%; animation-delay: 0s; }
-.floating-elements span:nth-child(2) { left: 50%; animation-delay: 0.5s; }
-.floating-elements span:nth-child(3) { left: 80%; animation-delay: 1s; }
+.floating-elements span:nth-child(1) { 
+    left: 20%; 
+    animation-delay: 0s;
+    animation: float-around 3s infinite, swirl 4s infinite;
+}
+.floating-elements span:nth-child(2) { 
+    left: 50%; 
+    animation-delay: 0.5s;
+    animation: float-around 3s infinite, swirl 4s infinite 0.5s;
+}
+.floating-elements span:nth-child(3) { 
+    left: 80%; 
+    animation-delay: 1s;
+    animation: float-around 3s infinite, swirl 4s infinite 1s;
+}
 
 @keyframes float-around {
     0% { transform: translateY(0) rotate(0deg); }
     50% { transform: translateY(-20px) rotate(180deg); }
     100% { transform: translateY(0) rotate(360deg); }
+}
+
+@keyframes swirl {
+    0% { transform: translate(0, 0) rotate(0deg); }
+    25% { transform: translate(20px, -20px) rotate(90deg); }
+    50% { transform: translate(0, -40px) rotate(180deg); }
+    75% { transform: translate(-20px, -20px) rotate(270deg); }
+    100% { transform: translate(0, 0) rotate(360deg); }
 }
 
 footer {
