--- a/styles/home.css
+++ b/styles/home.css
@@ -97,17 +97,17 @@
 .floating-elements span:nth-child(1) { 
     left: 20%; 
     animation-delay: 0s;
-    animation: float-around 3s infinite, swirl 4s infinite;
+    animation: float-around 3s infinite, swirl 6s infinite cubic-bezier(0.4, 0, 0.2, 1);
 }
 .floating-elements span:nth-child(2) { 
     left: 50%; 
     animation-delay: 0.5s;
-    animation: float-around 3s infinite, swirl 4s infinite 0.5s;
+    animation: float-around 3s infinite, swirl 6s infinite 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .floating-elements span:nth-child(3) { 
     left: 80%; 
     animation-delay: 1s;
-    animation: float-around 3s infinite, swirl 4s infinite 1s;
+    animation: float-around 3s infinite, swirl 6s infinite 1s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @keyframes float-around {
@@ -118,9 +118,9 @@
 
 @keyframes swirl {
     0% { transform: translate(0, 0) rotate(0deg); }
-    25% { transform: translate(20px, -20px) rotate(90deg); }
-    50% { transform: translate(0, -40px) rotate(180deg); }
-    75% { transform: translate(-20px, -20px) rotate(270deg); }
+    25% { transform: translate(30px, -30px) rotate(90deg); }
+    50% { transform: translate(0, -60px) rotate(180deg); }
+    75% { transform: translate(-30px, -30px) rotate(270deg); }
     100% { transform: translate(0, 0) rotate(360deg); }
 }
 
