--- a/styles/home.css
+++ b/styles/home.css
@@ -75,13 +75,14 @@
 
 .floating-elements {
     position: absolute;
-    top: -20px;
-    left: 0;
+    top: 50%;
+    left: 50%;
     width: 100%;
     height: 100%;
     pointer-events: none;
     opacity: 0;
     transition: opacity 0.3s ease;
+    transform: translate(-50%, -50%);
 }
 
 .nav-button-container:hover .floating-elements {
@@ -95,19 +96,16 @@
 }
 
 .floating-elements span:nth-child(1) { 
-    left: 20%; 
-    animation-delay: 0s;
     animation: float-around 3s infinite, swirl 6s infinite cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translate(-50%, -50%);
 }
 .floating-elements span:nth-child(2) { 
-    left: 50%; 
-    animation-delay: 0.5s;
     animation: float-around 3s infinite, swirl 6s infinite 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translate(-50%, -50%) rotate(120deg);
 }
 .floating-elements span:nth-child(3) { 
-    left: 80%; 
-    animation-delay: 1s;
     animation: float-around 3s infinite, swirl 6s infinite 1s cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translate(-50%, -50%) rotate(240deg);
 }
 
 @keyframes float-around {
@@ -117,11 +115,11 @@
 }
 
 @keyframes swirl {
-    0% { transform: translate(0, 0) rotate(0deg); }
-    25% { transform: translate(30px, -30px) rotate(90deg); }
-    50% { transform: translate(0, -60px) rotate(180deg); }
-    75% { transform: translate(-30px, -30px) rotate(270deg); }
-    100% { transform: translate(0, 0) rotate(360deg); }
+    0% { transform: translate(-50%, -50%) rotate(0deg); }
+    25% { transform: translate(-50%, -50%) rotate(90deg) translateY(-40px); }
+    50% { transform: translate(-50%, -50%) rotate(180deg) translateY(-40px); }
+    75% { transform: translate(-50%, -50%) rotate(270deg) translateY(-40px); }
+    100% { transform: translate(-50%, -50%) rotate(360deg); }
 }
 
 footer {
