--- a/styles/home.css
+++ b/styles/home.css
@@ -75,13 +75,14 @@
 
 .floating-elements {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
     width: 100%;
     height: 100%;
     pointer-events: none;
     opacity: 0;
     transition: opacity 0.3s ease;
+    transform: translate(-50%, -50%);
 }
 
 .nav-button-container:hover .floating-elements {
@@ -95,19 +96,13 @@
 }
 
 .floating-elements span:nth-child(1) { 
-    top: 0;
-    left: 50%;
-    animation: float-around 3s infinite, swirl 8s infinite cubic-bezier(0.45, 0.05, 0.55, 0.95);
+    animation: float-around 3s infinite, swirl 8s infinite linear;
 }
 .floating-elements span:nth-child(2) { 
-    top: 50%;
-    right: 0;
-    animation: float-around 3s infinite, swirl 8s infinite 0.5s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+    animation: float-around 3s infinite, swirl 8s infinite linear 2.67s;
 }
 .floating-elements span:nth-child(3) { 
-    bottom: 0;
-    left: 50%;
-    animation: float-around 3s infinite, swirl 8s infinite 1s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+    animation: float-around 3s infinite, swirl 8s infinite linear 5.33s;
 }
 
 @keyframes float-around {
@@ -117,11 +112,8 @@
 }
 
 @keyframes swirl {
-    0% { transform: translate(-50%, -50%) rotate(0deg); }
-    25% { transform: translate(-50%, -50%) rotate(90deg) translateX(120px); }
-    50% { transform: translate(-50%, -50%) rotate(180deg) translateX(120px); }
-    75% { transform: translate(-50%, -50%) rotate(270deg) translateX(120px); }
-    100% { transform: translate(-50%, -50%) rotate(360deg); }
+    0% { transform: rotate(0deg) translateX(120px) rotate(0deg); }
+    100% { transform: rotate(360deg) translateX(120px) rotate(-360deg); }
 }
 
 footer {
