--- a/styles/branch.css
+++ b/styles/branch.css
@@ -12,4 +12,16 @@
 
 .logo:hover {
     transform: translateX(calc(160px / 2 - 50px)) scale(1.1) rotate(5deg);
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
 } 
