--- a/styles/branch.css
+++ b/styles/branch.css
@@ -30,8 +30,9 @@
     text-align: center;
     position: absolute;
     top: 25vh;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0;
+    right: 0;
+    margin: 0 auto;
     width: 100%;
 }
 
